Add disaster history API & update swagger docs
